samples/_failures_safe/1760888017_56c584_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_477a5b4b.c: In function ‘main’:
./samples/SAFE/__tmp_477a5b4b.c:178:13: error: expected ‘;’ at end of input
  178 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_477a5b4b.c:178:5: error: expected declaration or statement at end of input
  178 |     return 0
      |     ^~~~~~
